# simpleAppPyAzureFuncApp

./: .gitignore  README.md  function_app.py  pyproject.toml  requirements.txt
.github/workflows/: main_pysimpleapp.yml
app/: fastapi_app.py
